--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
 
 install:
   # stick with stdlib + nose for now, keep option open for conda below
-  - pip install nose
+  - pip install nose parameterized
   # set up basic conda env via miniconda
   # - sudo apt-get update
   # - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
