--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ notifications:
   email: false
 
 install:
-  - pip install numpy scipy
+  - pip install numpy scipy networkx
 
 script:
   - pytest -l .
